# boilerplate

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: ci-tox.yml
app/: config.py  database.py  main.py
app/alembic/: env.py
app/models/: __init__.py
